-修改聊天记录划分维度